--- a/main.css
+++ b/main.css
@@ -38,6 +38,10 @@ body {
     transform: scaleX(1.01) translateY(-200px);
   }
 
+  2% {
+    transform: scaleX(1.01) translateY(-200px);
+  }
+
   /* 50% {
     transform: translateY(150px);
   } */
@@ -49,6 +53,11 @@ body {
 
 @keyframes shadow {
   0% {
+    transform: translateY(110px);
+    box-shadow: 0px 400px 4px 0px rgba(0, 0, 0, 0.4);
+  }
+
+  2% {
     transform: translateY(110px);
     box-shadow: 0px 400px 4px 0px rgba(0, 0, 0, 0.4);
   }
